[gd_scene load_steps=5 format=2]

[ext_resource path="res://spaceship/spaceship.tscn" type="PackedScene" id=1]
[ext_resource path="res://controller/spaceship_controller.gd" type="Script" id=2]
[ext_resource path="res://controller/spaceship_controller_collision_shape.tres" type="Shape" id=3]

[sub_resource type="SphereShape" id=1]
radius = 3.0

[node name="SpacehipController" type="KinematicBody" groups=["spaceship"]]
collision_layer = 0
collision_mask = 0
axis_lock_motion_y = true
axis_lock_motion_z = true
move_lock_y = true
move_lock_z = true
script = ExtResource( 2 )

[node name="Spaceship" parent="." instance=ExtResource( 1 )]

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = ExtResource( 3 )

[node name="CollisionDetector" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="CollisionDetector"]
shape = ExtResource( 3 )

[node name="Explosion" type="Timer" parent="."]

[node name="SelectionDetect" type="Area" parent="."]
collision_layer = 2
collision_mask = 0

[node name="CollisionShape" type="CollisionShape" parent="SelectionDetect"]
shape = SubResource( 1 )

[connection signal="area_entered" from="CollisionDetector" to="." method="_on_CollisionDetector_area_entered"]
[connection signal="timeout" from="Explosion" to="." method="_on_Explosion_timeout"]
[connection signal="mouse_entered" from="SelectionDetect" to="." method="_on_SelectionDetect_mouse_entered"]
[connection signal="mouse_exited" from="SelectionDetect" to="." method="_on_SelectionDetect_mouse_exited"]
